--- a/config.toml
+++ b/config.toml
@@ -54,16 +54,21 @@ pygmentscodefencesguesssyntax = true
 # Menu links
 [[menu.main]]
     name = "Blog"
-    weight = 2
+    weight = 1
     url  = "/blogs/"
 
 
 [[menu.main]]
     name = "Contact"
-    weight = 3
+    weight = 4
     url  = "/contact"
 
 [[menu.main]]
     name = "About"
-    weight = 1
+    weight = 3
     url  = "/about"
+
+[[menu.main]]
+    name = "OSS"
+    weight = 2
+    url  = "/oss"
