--- a/config.toml
+++ b/config.toml
@@ -56,13 +56,18 @@ pygmentscodefencesguesssyntax = true
 [[params.social]]
     name = "Twitter"
     icon = "fab fa-twitter fa-2x"
-    weight = 2
+    weight = 4
     url = "https://twitter.com/0lblak/"
 [[params.social]]
     name = "Linkedin"
     icon = "fab fa-linkedin fa-2x"
     weight = 3
     url = "https://www.linkedin.com/in/overnin/"
+[[params.social]]
+    name = "Mastodon"
+    icon = "fab fa-mastodon fa-2x"
+    weight = 2
+    url = "https://fosstodon.org/@olblak"
 
 # Menu links
 [[menu.main]]
