--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,18 @@ pygmentscodefencesguesssyntax = true
 
 # disqusShortname = "olblak"
 
+[security]
+  enableInlineShortcodes = false
+  [security.exec]
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$', '^asciidoctor$']
+    osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
+  [security.funcs]
+    getenv = ['^HUGO_']
+  [security.http]
+    methods = ['(?i)GET|POST']
+    urls = ['.*']
+
+
 [params]
     author = "Olblak"
     info = ""
