fix: allow to run git log command

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentscodefencesguesssyntax = true
 [security]
   enableInlineShortcodes = false
   [security.exec]
-    allow = ['^dart-sass-embedded$', '^go$', '^npx$', '^postcss$', '^asciidoctor$']
+    allow = ['^dart-sass-embedded$', '^go$', '^npx$','^git$', '^postcss$', '^asciidoctor$']
     osEnv = ['(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM)$']
   [security.funcs]
     getenv = ['^HUGO_']
