--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
 publish = "public"
 command = "hugo --gc --minify"
 
+[build.environment]
+HUGO_VERSION = "0.134.2"
+
 [context.production.environment]
 HUGO_VERSION = "0.134.2"
 HUGO_ENV = "production"
